CMAKE_MINIMUM_REQUIRED ( VERSION 3.0 )

PROJECT ( Compress )

ADD_COMPILE_OPTIONS ( -Os )
SET ( CMAKE_C_FLAGS_RELEASE "-DCONFIG_RELEASE " )
SET ( CMAKE_C_FLAGS_DEBUG "-DCONFIG_DEBUG " )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

ADD_EXECUTABLE (
    Compress
    src/compress.cpp
)

ADD_EXECUTABLE (
    huffman_test
    src/huffman.cpp
)